force-app/main/default/objects/Staged_Prospective_Student__c.object
<CustomObject>
    <description>Staging object to capture prospective student data in a de-normalised form, which would be normalised into the Contact 360 data model through further processing post insertion.</description>
    <fields>
        <fullName>Acquisition_Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Acquisition Souce Campaign for the Prospective Student Lead.</description>
        <inlineHelpText>Acquisition source campaign for the Prospective Student Lead.</inlineHelpText>
        <label>Acquisition Source Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Staged Prospective Students</relationshipLabel>
        <relationshipName>Staged_Prospective_Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attended_By__c</fullName>
        <description>Field to capture Attended By Agent from MUM Queebee system</description>
        <label>Attended By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birth_year__c</fullName>
        <description>year of birth of the prospective student</description>
        <inlineHelpText>Birthyear of the Prospective Student Contact.</inlineHelpText>
        <label>Birth year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <description>Birthdate of the Prospective Student Contact.</description>
        <inlineHelpText>Birthdate of the Prospective Student Contact.</inlineHelpText>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broad_Area_of_Interest_Update_Mode__c</fullName>
        <description>Field mapped to formstack. To define if the field should be overridden by the new value or not.</description>
        <inlineHelpText>Defines if the field should be overwritten by the new value or not.</inlineHelpText>
        <label>Broad Area of Interest Update Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overwrite</fullName>
                    <default>true</default>
                    <label>Overwrite</label>
                </value>
                <value>
                    <fullName>Append</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broad_area_s_of_interest__c</fullName>
        <description>Broad area(s) of interest of the Prospective Student Lead.</description>
        <inlineHelpText>Broad area(s) of interest of the Prospective Student Lead.</inlineHelpText>
        <label>Broad area(s) of interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Art, Design and Architecture</fullName>
                </value>
                <value>
                    <fullName>Arts, Humanities and Social Sciences</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Medicine, Nursing and Health Sciences</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Pharmacy and Pharmaceutical Sciences</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Current company of the Prospective Student</description>
        <inlineHelpText>Current company of the Prospective Student</inlineHelpText>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_Secondary_School__c</fullName>
        <description>Year of secondary school completion for the Prospective Student Lead.</description>
        <inlineHelpText>Year of secondary school completion for the Prospective Student Lead.</inlineHelpText>
        <label>When will you complete secondary school?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Considering_Asian_universities_Text__c</fullName>
        <description>Determine if the Prospective Student is considering Asian university.</description>
        <inlineHelpText>Determine if the Prospective Student is considering Asian university.</inlineHelpText>
        <label>Considering Asian universities? (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Qualification_JSON__c</fullName>
        <description>Sets of Qualification &amp; Institution submitted the prospective student in JSON format.

Expected JSON format : [  
   {  
      &quot;attributes&quot;:{  
         &quot;type&quot;:&quot;Contact_Qualification__c&quot;
      },
      &quot;Other_Qualification__c&quot;:&quot;XXXXX&quot;,
      &quot;Institution_Name__c&quot;:&quot;YYYYY&quot;
   },
   {  
      &quot;attributes&quot;:{  
         &quot;type&quot;:&quot;Contact_Qualification__c&quot;
      },
      &quot;Other_Qualification__c&quot;:&quot;XXXXX&quot;,
      &quot;Institution_Name__c&quot;:&quot;YYYYY&quot;
   }
]
XXXXX for Qualification would the name of the Qualification.
YYYYY for Institution would be the name of the institution.</description>
        <inlineHelpText>Sets of Qualification &amp; Institution submitted the prospective student in JSON format.</inlineHelpText>
        <label>Contact Qualification JSON</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_of_Residence__c</fullName>
        <description>Country of Residence for the Prospective Student Contact.</description>
        <inlineHelpText>Country of Residence for the Prospective Student Contact.</inlineHelpText>
        <label>Country of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>ADELIE LAND (FRANCE)</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA, NFD</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINIAN ANTARCTIC TERRITORY</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIAN ANTARCTIC TERRITORY</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIAN EXTERNAL TERRITORIES, NEC</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Studies__c</fullName>
        <description>Current studies of Prospective Student Lead.</description>
        <inlineHelpText>Current studies of Prospective Student Lead.</inlineHelpText>
        <label>Current Studies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary School</fullName>
                </value>
                <value>
                    <fullName>TAFE or RTO</fullName>
                </value>
                <value>
                    <fullName>Current student at Monash University</fullName>
                </value>
                <value>
                    <fullName>Another University</fullName>
                </value>
                <value>
                    <fullName>Not currently studying</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_Start_Period__c</fullName>
        <description>Desired Start Period of the Prospective Student Lead.</description>
        <inlineHelpText>Desired Start Period of the Prospective Student Lead.</inlineHelpText>
        <label>Desired Start Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Semester 1</fullName>
                </value>
                <value>
                    <fullName>Semester 2</fullName>
                </value>
                <value>
                    <fullName>Trimester 1</fullName>
                </value>
                <value>
                    <fullName>Trimester 2</fullName>
                </value>
                <value>
                    <fullName>Trimester 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_Start_Year__c</fullName>
        <description>Desired Start Year of the Prospective Student Lead.</description>
        <inlineHelpText>Desired Start Year of the Prospective Student Lead.</inlineHelpText>
        <label>Desired Start Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dietary_Requirements__c</fullName>
        <description>Dietary requirements of the Prospective Student Event Campaign Members. This value would be propagated to all added Event Campaign Members of the Prospective Student.</description>
        <inlineHelpText>Dietary requirements of the Prospective Student Event Campaign Members.</inlineHelpText>
        <label>Dietary Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Halal</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>Coeliac</fullName>
                </value>
                <value>
                    <fullName>Dairy allergy</fullName>
                </value>
                <value>
                    <fullName>Nut allergy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Create_Acquisition_Camp_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting the field top true would not create an acquisition campaign member.

mainly used so that Blackthorn attendees won&apos;t create duplicate campaign members.</description>
        <inlineHelpText>used so that Blackthorn attendees won&apos;t create duplicate campaign members.</inlineHelpText>
        <label>Do Not Create Acquisition Camp Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This fields defines whether the SPS  should overwrite field values when matched existing records are found on Exploding Leads</description>
        <inlineHelpText>Defines whether the SPS should overwrite field values when matched existing records are found on Exploding Leads.</inlineHelpText>
        <label>Do Not Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of the Prospective Student Contact.</description>
        <inlineHelpText>Email of the Prospective Student Contact.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>English_Proficiency_Level__c</fullName>
        <description>English Proficiency Level of Prospective Student Lead.</description>
        <inlineHelpText>English Proficiency Level of Prospective Student Lead.</inlineHelpText>
        <label>English Proficiency Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Certificate in Advanced English</fullName>
                </value>
                <value>
                    <fullName>Certficate of Proficiency in English</fullName>
                </value>
                <value>
                    <fullName>TOEFL COMPUTER BASED (TEST OF ENGLISH AS A FOREIGN LANGUAGE)</fullName>
                </value>
                <value>
                    <fullName>IELTS (International English Language Testing Service)</fullName>
                </value>
                <value>
                    <fullName>Internet based TOEFL (Test of English as a Foreign Language)</fullName>
                </value>
                <value>
                    <fullName>Monash English Language Placement test - MUELC only</fullName>
                </value>
                <value>
                    <fullName>Paper based TOEFL (Test of English as a Foreign Language)</fullName>
                </value>
                <value>
                    <fullName>Pearson Test of English (Academic)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enquiry_Description__c</fullName>
        <description>Contains the details regarding the enquiry</description>
        <inlineHelpText>Contains the details regarding the enquiry.</inlineHelpText>
        <label>Enquiry Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enquiry_Subject__c</fullName>
        <description>Subject line of enquiry</description>
        <inlineHelpText>Subject line of enquiry.</inlineHelpText>
        <label>Enquiry Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Campaigns__c</fullName>
        <description>List of Event Campaigns to add Prospective Student as Campaign members. Expected format : Line separated Campaign IDs.</description>
        <inlineHelpText>List of Event Campaigns to add Prospective Student as Campaign members.</inlineHelpText>
        <label>Event Campaigns</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Member_Status__c</fullName>
        <description>Status of the prospective student campaign member under the registered list of event campaigns.</description>
        <inlineHelpText>Status of the prospective student campaign member under the registered list of event campaigns.</inlineHelpText>
        <label>Event Member Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exploded_Enquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Case which was created from the &quot;Exploding Leads&quot; logic</description>
        <inlineHelpText>Lookup to the related Enquiry which was created from the &quot;Exploding Leads&quot;.</inlineHelpText>
        <label>Exploded Enquiry</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Staged Prospective Students</relationshipLabel>
        <relationshipName>Staged_Prospective_Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exploded_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the lead record that was generated as part of the Exploding Leads logic</description>
        <inlineHelpText>Lookup to the lead record that was generated as part of the Exploding Leads.</inlineHelpText>
        <label>Exploded Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Staged Prospective Students (Exploded Lead)</relationshipLabel>
        <relationshipName>Exploded_Staged_Prospective_Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exploded_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact associated to this exploded Staged Lead</description>
        <inlineHelpText>Contact associated to this exploded Staged Lead.</inlineHelpText>
        <label>Exploded Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Staged Prospective Students</relationshipLabel>
        <relationshipName>Staged_Prospective_Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exploding_Leads_V2__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates to run V2 of Exploding Leads logic</description>
        <label>Exploding Leads V2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extension_Enrolment__c</fullName>
        <label>Extension Enrolment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name of the Prospective Student Contact.</description>
        <inlineHelpText>First Name of the Prospective Student Contact.</inlineHelpText>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GACLIENTID__c</fullName>
        <description>Google Analytics field. ref: https://support.google.com/analytics/answer/7584446?hl=en

This will be mapped to the corresponding Lead field via custom metadata</description>
        <inlineHelpText>Google Analytics field.</inlineHelpText>
        <label>GA Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GATRACKID__c</fullName>
        <description>Google Analytics field. ref: https://support.google.com/analytics/answer/7584446?hl=en

This will be mapped to the corresponding Lead field via custom metadata</description>
        <inlineHelpText>Google Analytics field.</inlineHelpText>
        <label>GA Track ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAUSERID__c</fullName>
        <description>Google Analytics field. ref: https://support.google.com/analytics/answer/7584446?hl=en

This will be mapped to the corresponding Lead field via custom metadata</description>
        <inlineHelpText>Google Analytics field.</inlineHelpText>
        <label>GA User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender of the Prospective Student Contact.</description>
        <inlineHelpText>Gender of the Prospective Student Contact.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_Course_List__c</fullName>
        <description>List of course IDs or Course Code that the Prospective Student is interested in</description>
        <inlineHelpText>Course IDs or Course Code that the Prospective Student is interested in.</inlineHelpText>
        <label>Interested Course List</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interested_in_Monash_College_Text__c</fullName>
        <description>Determine if the Prospective Student is interested in Monash College.</description>
        <inlineHelpText>Determine if the Prospective Student is interested in Monash College.</inlineHelpText>
        <label>Interested in Monash College (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of the Prospective Student Contact.</description>
        <inlineHelpText>Last Name of the Prospective Student Contact.</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Lead Source of the Prospective Student Lead.</description>
        <inlineHelpText>Lead Source of the Prospective Student Lead.</inlineHelpText>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Seminar - Internal</fullName>
                </value>
                <value>
                    <fullName>Seminar - Partner</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Web - SR Event</fullName>
                </value>
                <value>
                    <fullName>Walk In (MUM FSO)</fullName>
                </value>
                <value>
                    <fullName>Appointment (MUM FSO)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <description>Mailing City for the Prospective Student Contact.</description>
        <inlineHelpText>Mailing City for the Prospective Student Contact.</inlineHelpText>
        <label>Mailing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <description>Mailing Country for the Prospective Student Contact.</description>
        <inlineHelpText>Mailing Country for the Prospective Student Contact.</inlineHelpText>
        <label>Mailing Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_List_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Postcode__c</fullName>
        <description>Mailing Postcode for the Prospective Student Contact.</description>
        <inlineHelpText>Mailing Postcode for the Prospective Student Contact.</inlineHelpText>
        <label>Mailing Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <description>Mailing State for the Prospective Student Contact.</description>
        <inlineHelpText>Mailing State for the Prospective Student Contact.</inlineHelpText>
        <label>Mailing State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <description>Mailing Street of Prospective Student Contact.</description>
        <inlineHelpText>Mailing Street of Prospective Student Contact.</inlineHelpText>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Migrated_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contains Lead ID for migrated lead to determine source and historical data value</description>
        <inlineHelpText>Contains Lead ID for migrated lead to determine source and historical data value.</inlineHelpText>
        <label>Migrated Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Staged Prospective Students</relationshipLabel>
        <relationshipName>Staged_Prospective_Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Mobile for the Prospective Student Contact.</description>
        <inlineHelpText>Mobile for the Prospective Student Contact.</inlineHelpText>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Monash_Visitor_ID__c</fullName>
        <description>Field to capture Monash Visitor ID in order to maintain traceability of Leads</description>
        <label>Monash Visitor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <description>Nationality of the Prospective Student Contact.</description>
        <inlineHelpText>Nationality of the Prospective Student Contact.</inlineHelpText>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>ADELIE LAND (FRANCE)</fullName>
                </value>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>ALL INDIAN OCEAN COUNTRIES</fullName>
                </value>
                <value>
                    <fullName>ALL OTHER AFRICAN COUNTRIES NOT LISTED ABOVE</fullName>
                </value>
                <value>
                    <fullName>ALL OTHER OVERSEAS COUNTRIES</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA, NFD</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINIAN ANTARCTIC TERRITORY</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIAN ANTARCTIC TERRITORY</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIAN EXTERNAL TERRITORIES, NEC</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>